--- a/Kikelet_Panzio/MainWindow.xaml
+++ b/Kikelet_Panzio/MainWindow.xaml
@@ -5,37 +5,55 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kikelet_Panzio"
         mc:Ignorable="d"
-        Title="Kikelet Panzió" Height="450" Width="345" WindowStyle="ThreeDBorderWindow">
-    <Grid>
-        <StackPanel>
-            <StackPanel.Background>
-                <ImageBrush ImageSource="/viraghatter.jpg" TileMode="None"/>
-            </StackPanel.Background>
+        Title="Kikelet Panzió" Height="326" Width="597" WindowStyle="ThreeDBorderWindow">
+    <Window.Background>
+        <ImageBrush/>
+    </Window.Background>
+    <Grid Background="White">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Background="White" Grid.Column="0">
             <Menu>
                 <MenuItem Header="Regisztráció" Name="MniReg" Click="MniReg_Click" HorizontalAlignment="Right"/>
-                <MenuItem Name="MniName"/>
+                <MenuItem Header="Statisztika" Name="MniStats" Click="MniStats_Click"/>
             </Menu>
-            <Label Content="Személyek száma:" Margin="5"/>
-            <TextBox Name="TbxPerson" Margin="5"/>
-            <Label Content="Ügyfél neve:" Margin="5"/>
-            <TextBox Name="TbxUser" Margin="5"/>
+            <StackPanel Orientation="Horizontal">
+            <Label Content="Szobaszám:" Margin="5"/>
+                <ComboBox Name="CbxRooms" Width="100" HorizontalAlignment="Left" Margin="5"/>
+            
+            <Label Content="Fő:"/>
+                <ComboBox Name="CbxPeople" Width="50" Margin="5"/>
+            </StackPanel>
+            
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Ügyfél neve:" Margin="5"/>
+                <ComboBox Name="CbxName" Width="180" Margin="5"/>
+            </StackPanel>
+            
             <StackPanel Orientation="Horizontal">
                 <Label Content="Érkezés időpontja:" Margin="5"/>
                 <DatePicker Name="DtpArrival" Margin="5"/>
             </StackPanel>
+            
             <StackPanel Orientation="Horizontal">
                 <Label Content="Távozás időpontja" Margin="5"/>
                 <DatePicker Name="DtpDeparture" Margin="5"/>
             </StackPanel>
+            
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Ár"  Margin="5"/>
+                <TextBox Name="TbxPrice" Margin="5" Width="110"/>
+            </StackPanel>
+
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button Name="BtnClose" Content="Kilépés" Width="100" Height="40" Margin="5" Background="#FFFF4141" FontWeight="Medium" Click="BtnClose_Click"/>
-                <Button Name="BtnConfirm" Content="Foglalás" Width="100" Height="40" Margin="5" Background="#FF25FF33" FontWeight="ExtraBold" Click="BtnConfirm_Click" />
+                <Button Name="BtnConfirm" Content="Megerősít" Width="100" Height="40" Margin="5" Background="#FF25FF33" FontWeight="ExtraBold" Click="BtnConfirm_Click" />
             </StackPanel>
-            
-
-
 
         </StackPanel>
+        <DataGrid Name="DtgDatas" d:ItemsSource="{d:SampleData ItemCount=5}" Grid.ColumnSpan="2" Margin="298,0,0,155"/>
 
     </Grid>
 </Window>
